[package]
name = "crossbeam-skiplist-mvcc"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/al8n/crossbeam-skiplist-mvcc"
homepage = "https://github.com/al8n/crossbeam-skiplist-mvcc"
documentation = "https://docs.rs/crossbeam-skiplist-mvcc"
description = "Support MVCC (Multiple Version Concurrent Control) for `crossbeam-skiplist`."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["crossbeam", "skiplist", "mvcc", "crossbeam-skiplist", "data-structure"]
categories = ["data-structures", "concurrency", "development-tools", "database-implementations"]

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
std = []

[dependencies]
crossbeam-skiplist = { package = "crossbeam-skiplist-pr1132", version = "0.1" }

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "nested"
path = "tests/nested.rs"

[[test]]
name = "flatten"
path = "tests/flatten.rs"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
